--- a/MLcourse/index.html
+++ b/MLcourse/index.html
@@ -25,7 +25,7 @@
 <meta name="author" content="Mohamad Ghassany">
 
 
-<meta name="date" content="2018-12-08">
+<meta name="date" content="2018-12-19">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -329,7 +329,7 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
 <div id="header">
 <h1 class="title">Machine Learning</h1>
 <h4 class="author"><em>Mohamad Ghassany</em></h4>
-<h4 class="date"><em>2018-12-08</em></h4>
+<h4 class="date"><em>2018-12-19</em></h4>
 </div>
 <div id="welcome" class="section level1 unnumbered">
 <h1>Welcome</h1>
@@ -345,6 +345,9 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
 <iframe width="560" height="315" src="https://www.youtube.com/embed/lUaKOOevvvo" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen>
 </iframe>
 </center>
+<!-- ```{r, echo = FALSE, out.width = '80%', fig.align = 'center'} -->
+<!-- knitr::include_graphics("img/Logo_ESILV.png") -->
+<!-- ``` -->
 
 </div>
 </div>
